--- a/checklist/checklist.css
+++ b/checklist/checklist.css
@@ -57,6 +57,16 @@ tr {
     margin-right: 102px;
 }
 
+.btn-primary {
+    border-color: #00A000;
+    background-color: #00A000;
+}
+
+.btn-primary:hover {
+    border-color: #007000;
+    background-color: #007000;
+}
+
 #button-bar {
     margin-bottom: 20px; 
     display: flex;
@@ -91,8 +101,18 @@ tr {
 }
 
 .form-check-input:hover {
-    border-color: #b8b8f5;
-    background-color: #b8b8f5;
+    border-color: #ddddff;
+    background-color: #ddddff;
+}
+
+.form-check-input:checked {
+    border-color: #00A000;
+    background-color: #00A000;
+}
+
+.form-check-input:checked:hover {
+    border-color: #007000;
+    background-color: #007000;
 }
 
 body {
