--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -39,3 +39,51 @@ h2 {
     background-color: #00A000;
     outline: 8px solid #00A000;
 }
+
+.correction-block {
+    border-radius: 2rem;
+    padding: 1rem;
+
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.5);
+}
+
+.correction-block > * {
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+}
+
+.answer-block {
+    display: flex;
+    border: 1px solid gray;
+    border-radius: 1rem; 
+    padding: 0;
+
+}
+
+.answer-block > div {
+    padding: 10px;
+    margin: 0;
+   
+}
+
+.wrong-answer-tint {
+    background-color: red;
+    border-radius: 1rem 0rem 0rem 1rem;
+    min-height: 100%;
+}
+
+.correct-answer-tint {
+    background-color: green;
+    border-radius: 1rem 0rem 0rem 1rem;
+    min-height: 100%;
+}
+
+.correction-section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.correction-section > * {
+    margin-right: .5rem;
+    margin-left: .5rem;
+}
