--- a/checklist/checklist.css
+++ b/checklist/checklist.css
@@ -10,6 +10,19 @@ tr {
   height: 48px;
 }
 
+a {
+    color: black;
+    font-weight: 800;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #00A000;
+    font-size: 24px;
+    font-weight: 800;
+    text-decoration: none;
+}
+
 .c-data {
     display: inline-block;
     align-self: start;
