--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -1,7 +1,19 @@
 header {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 28px;
-    height: 60px;
+}
+
+a {
+    color: black;
+    font-weight: 800;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #00A000;
+    font-size: 24px;
+    font-weight: 800;
+    text-decoration: none;
 }
 
 body {
@@ -105,4 +117,24 @@ i {
 .correction-section > * {
     margin-right: .5rem;
     margin-left: .5rem;
+}
+
+.cron, .score {
+    width: 8rem;
+    min-height: 8rem;
+    max-height: 8rem;
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: #EEFFEE;
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.5);
+    align-items: center;
+}
+
+#cron-text, #score-text, #cron-text-end {
+    font-size: 18px;
+    font-weight: 800;
+}
+
+.hidden {
+    display: none;
 }
