modified:   index.js 	modified:   quiz/quiz.css 	modified:   quiz/quiz.html 	modified:   quiz/quiz.js

--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -138,3 +138,10 @@ i {
 .hidden {
     display: none;
 }
+
+@media (max-width: 960px) { 
+    .correction-section {
+        display: grid;
+        grid-template-columns: auto;
+    }
+}
