--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -140,8 +140,8 @@ form {
     max-height: 8rem;
     padding: 1rem;
     border-radius: 1rem;
-    background-color: #EEFFEE;
-    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.5);
+    background-color: #FFFFFF;
+    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.5);
     align-items: center;
 }
 
