modified:   checklist/checklist.css 	modified:   checklist/checklist.html

--- a/checklist/checklist.css
+++ b/checklist/checklist.css
@@ -88,6 +88,12 @@ a:hover {
 
 #add-checklist {
     transition: .08s;
+    display: flex;
+    align-items: center;
+}
+
+#add-checklist > * {
+    margin-right: 8px;
 }
 
 #add-checklist:hover {
