--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -123,12 +123,18 @@ form {
     background-color: #b8ffa9;
 }
 
-.correction-section {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+#correction-section > h2 {
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
-.correction-section > * {
+.correction-section-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 1rem;
+}
+
+.correction-section-grid > * {
     margin-right: .5rem;
     margin-left: .5rem;
     margin-bottom: 1rem;
